--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 </head>
 <body>
     <ul>
-        <li>Vagrant</li>
-        <li>Docker</li>
-        <li>Ansible</li>
+        <li><b>Vagrant</b></li>
+        <li><i>Docker</i></li>
+        <li><b>Ansible</b></li>
         <li>Integração Contínua</li>
 	<li>JavaScript</li>
     </ul>
