--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <li><b>Vagrant</b></li>
         <li><i>Docker</i></li>
         <li><b>Ansible</b></li>
-        <li>Integração Contínua</li>
+        <li><i>Integração Contínua</i></li>
 	<li>JavaScript</li>
     </ul>
 </body>
